--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ flask = "*"
 flask-httpauth = "*"
 flask-limiter = "*"
 opencv-python = "*"
+tensorflow = "*"
 
 [requires]
 python_version = "3.7"
